deployment_canary2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motd-deployment-with-configmap2
  namespace: marc-boursetmarcellas
  labels:
    app: motd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: motd
  template:
    metadata:
      labels:
        app: motd
    spec:
      containers:
      - name: motd
        image: magnorod/motd-api-image
        command: ["./motd-api.py"]
        args: ["80", "message-test"]
        ports:
        - containerPort: 80
