pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-marc-motd
  labels:
    app: motd
spec:
  containers:
  - name: motd
    image: magnorod/motd-api-image
    command: ["./motd-api.py"]
    args: ["80", "serveur web dans mon pod"]
    ports:
      - containerPort: 80
