statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-redis
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: "redis"
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: redis
        image: magnorod/redis-with-message-key
        ports:
          - containerPort: 6379
        volumeMounts:
          - name: redis-persistent-storage
            mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: redis-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
