service-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: service-load-balancer
spec:
  selector:
    app: motd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
