service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: motd
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 80
