ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motd
spec:
  ingressClassName: nginx
  rules:
  - host: marc-boursetmarcellas.amnay.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 8888
